# cookiecutter-templates

./: .editorconfig  .gitignore  Makefile  Pipfile  README.md  create_empty_notebook.py
awesome/: cookiecutter.json
awesome/{{cookiecutter.project_slug}}/: code-of-conduct.md  notes.md  readme.md
python-cli/: cookiecutter.json
python-cli/{{cookiecutter.project_slug}}/: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
python-cli/{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: cli.py
python-pkg/: cookiecutter.json
python-pkg/hooks/: post_gen_project.py
python-pkg/{{cookiecutter.project_slug}}/: Makefile  README.md  pyproject.toml
python-pkg/{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: py.typed
